Reactjs Compiler 2/gen/antlr/ReactjsParser.java
// Generated from C:/Users/HP/Documents/Intellij/Reactjs Compiler 2/src/antlr/ReactjsParser.g4 by ANTLR 4.13.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ReactjsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, EXTENDS=2, REACT_PURE_COMPONENT=3, RENDER=4, RETURN=5, EXPORT=6, 
		DEFAULT=7, IF=8, ELSE=9, FOR=10, CLASS_NAME=11, VAR=12, CONST=13, PROPS=14, 
		USESTATE=15, USEEFFECT=16, USEREF=17, LENGTH=18, PUSH=19, ONCLICK=20, 
		OPEN_SQUARE_BRACKETS=21, CLOSE_SQUARE_BRACKETS=22, OPEN_CURLY_BRACKETS=23, 
		CLOSE_CURLY_BRACKETS=24, OPEN_PARENTHSES=25, CLOSE_PARENTHSES=26, OPEN_TAG=27, 
		CLOSE_TAG=28, ARROW=29, SLASH=30, EQUALS=31, DOUBLE_QUOTES=32, DOT=33, 
		COMMA=34, COLON=35, SIMICOLON=36, EX=37, PLUS=38, OR=39, AND=40, BOOLEAN=41, 
		WORD_WITH_CAPITAL=42, ID=43, NUMBER=44, WS=45;
	public static final int
		RULE_program = 0, RULE_pureComponent = 1, RULE_jsxComponent = 2, RULE_pureComponentBody = 3, 
		RULE_componentBody = 4, RULE_returnStatement = 5, RULE_htmlEL = 6, RULE_componentName = 7, 
		RULE_forAtt = 8, RULE_normalAtt = 9, RULE_propsAtt = 10, RULE_varAtt = 11, 
		RULE_onClick = 12, RULE_insideOnClick = 13, RULE_forValue = 14, RULE_varValue = 15, 
		RULE_attributeValue = 16, RULE_propsValue = 17, RULE_updateVarStringValue = 18, 
		RULE_updateVarIntValue = 19, RULE_declString = 20, RULE_declInt = 21, 
		RULE_forVar = 22, RULE_arrayLength = 23, RULE_declBoolean = 24, RULE_declArray = 25, 
		RULE_useState = 26, RULE_toggle = 27, RULE_boolState = 28, RULE_numberState = 29, 
		RULE_stringState = 30, RULE_arrayState = 31, RULE_object = 32, RULE_numObject = 33, 
		RULE_stringObject = 34, RULE_useEffect = 35, RULE_insideUseEffect = 36, 
		RULE_useRef = 37, RULE_insideUseRef = 38, RULE_forLoop = 39, RULE_insideFor = 40, 
		RULE_special = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "pureComponent", "jsxComponent", "pureComponentBody", "componentBody", 
			"returnStatement", "htmlEL", "componentName", "forAtt", "normalAtt", 
			"propsAtt", "varAtt", "onClick", "insideOnClick", "forValue", "varValue", 
			"attributeValue", "propsValue", "updateVarStringValue", "updateVarIntValue", 
			"declString", "declInt", "forVar", "arrayLength", "declBoolean", "declArray", 
			"useState", "toggle", "boolState", "numberState", "stringState", "arrayState", 
			"object", "numObject", "stringObject", "useEffect", "insideUseEffect", 
			"useRef", "insideUseRef", "forLoop", "insideFor", "special"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'extends'", "'React.PureComponent'", "'render'", "'return'", 
			"'export'", "'default'", "'if'", "'else'", "'for'", "'className'", null, 
			"'const'", "'props'", "'useState'", "'useEffect'", "'useRef'", "'length'", 
			"'push'", "'onClick'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'<'", 
			"'>'", "'=>'", "'/'", "'='", "'\"'", "'.'", "','", "':'", "';'", "'!'", 
			"'+'", "'||'", "'&&'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "EXTENDS", "REACT_PURE_COMPONENT", "RENDER", "RETURN", 
			"EXPORT", "DEFAULT", "IF", "ELSE", "FOR", "CLASS_NAME", "VAR", "CONST", 
			"PROPS", "USESTATE", "USEEFFECT", "USEREF", "LENGTH", "PUSH", "ONCLICK", 
			"OPEN_SQUARE_BRACKETS", "CLOSE_SQUARE_BRACKETS", "OPEN_CURLY_BRACKETS", 
			"CLOSE_CURLY_BRACKETS", "OPEN_PARENTHSES", "CLOSE_PARENTHSES", "OPEN_TAG", 
			"CLOSE_TAG", "ARROW", "SLASH", "EQUALS", "DOUBLE_QUOTES", "DOT", "COMMA", 
			"COLON", "SIMICOLON", "EX", "PLUS", "OR", "AND", "BOOLEAN", "WORD_WITH_CAPITAL", 
			"ID", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReactjsParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReactjsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ReactjsParser.EOF, 0); }
		public List<DeclIntContext> declInt() {
			return getRuleContexts(DeclIntContext.class);
		}
		public DeclIntContext declInt(int i) {
			return getRuleContext(DeclIntContext.class,i);
		}
		public List<DeclStringContext> declString() {
			return getRuleContexts(DeclStringContext.class);
		}
		public DeclStringContext declString(int i) {
			return getRuleContext(DeclStringContext.class,i);
		}
		public List<DeclBooleanContext> declBoolean() {
			return getRuleContexts(DeclBooleanContext.class);
		}
		public DeclBooleanContext declBoolean(int i) {
			return getRuleContext(DeclBooleanContext.class,i);
		}
		public List<PureComponentContext> pureComponent() {
			return getRuleContexts(PureComponentContext.class);
		}
		public PureComponentContext pureComponent(int i) {
			return getRuleContext(PureComponentContext.class,i);
		}
		public List<JsxComponentContext> jsxComponent() {
			return getRuleContexts(JsxComponentContext.class);
		}
		public JsxComponentContext jsxComponent(int i) {
			return getRuleContext(JsxComponentContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactjsParserVisitor ) return ((ReactjsParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(84);
					declInt();
					}
					} 
				}
				setState(89);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(90);
					declString();
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(96);
					declBoolean();
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(102);
				pureComponent();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONST) {
				{
				{
				setState(108);
				jsxComponent();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PureComponentContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(ReactjsParser.CLASS, 0); }
		public ComponentNameContext componentName() {
			return getRuleContext(ComponentNameContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(ReactjsParser.EXTENDS, 0); }
		public TerminalNode REACT_PURE_COMPONENT() { return getToken(ReactjsParser.REACT_PURE_COMPONENT, 0); }
		public TerminalNode OPEN_CURLY_BRACKETS() { return getToken(ReactjsParser.OPEN_CURLY_BRACKETS, 0); }
		public PureComponentBodyContext pureComponentBody() {
			return getRuleContext(PureComponentBodyContext.class,0);
		}
		public TerminalNode CLOSE_CURLY_BRACKETS() { return getToken(ReactjsParser.CLOSE_CURLY_BRACKETS, 0); }
		public PureComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pureComponent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).enterPureComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).exitPureComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactjsParserVisitor ) return ((ReactjsParserVisitor<? extends T>)visitor).visitPureComponent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PureComponentContext pureComponent() throws RecognitionException {
		PureComponentContext _localctx = new PureComponentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pureComponent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(CLASS);
			setState(117);
			componentName();
			setState(118);
			match(EXTENDS);
			setState(119);
			match(REACT_PURE_COMPONENT);
			setState(120);
			match(OPEN_CURLY_BRACKETS);
			setState(121);
			pureComponentBody();
			setState(122);
			match(CLOSE_CURLY_BRACKETS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsxComponentContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(ReactjsParser.CONST, 0); }
		public ComponentNameContext componentName() {
			return getRuleContext(ComponentNameContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(ReactjsParser.EQUALS, 0); }
		public TerminalNode OPEN_PARENTHSES() { return getToken(ReactjsParser.OPEN_PARENTHSES, 0); }
		public TerminalNode CLOSE_PARENTHSES() { return getToken(ReactjsParser.CLOSE_PARENTHSES, 0); }
		public TerminalNode ARROW() { return getToken(ReactjsParser.ARROW, 0); }
		public TerminalNode OPEN_CURLY_BRACKETS() { return getToken(ReactjsParser.OPEN_CURLY_BRACKETS, 0); }
		public ComponentBodyContext componentBody() {
			return getRuleContext(ComponentBodyContext.class,0);
		}
		public TerminalNode CLOSE_CURLY_BRACKETS() { return getToken(ReactjsParser.CLOSE_CURLY_BRACKETS, 0); }
		public TerminalNode PROPS() { return getToken(ReactjsParser.PROPS, 0); }
		public JsxComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsxComponent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).enterJsxComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).exitJsxComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactjsParserVisitor ) return ((ReactjsParserVisitor<? extends T>)visitor).visitJsxComponent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JsxComponentContext jsxComponent() throws RecognitionException {
		JsxComponentContext _localctx = new JsxComponentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jsxComponent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(CONST);
			setState(125);
			componentName();
			setState(126);
			match(EQUALS);
			setState(127);
			match(OPEN_PARENTHSES);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROPS) {
				{
				setState(128);
				match(PROPS);
				}
			}

			setState(131);
			match(CLOSE_PARENTHSES);
			setState(132);
			match(ARROW);
			setState(133);
			match(OPEN_CURLY_BRACKETS);
			setState(134);
			componentBody();
			setState(135);
			match(CLOSE_CURLY_BRACKETS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PureComponentBodyContext extends ParserRuleContext {
		public TerminalNode RENDER() { return getToken(ReactjsParser.RENDER, 0); }
		public TerminalNode OPEN_PARENTHSES() { return getToken(ReactjsParser.OPEN_PARENTHSES, 0); }
		public TerminalNode CLOSE_PARENTHSES() { return getToken(ReactjsParser.CLOSE_PARENTHSES, 0); }
		public TerminalNode OPEN_CURLY_BRACKETS() { return getToken(ReactjsParser.OPEN_CURLY_BRACKETS, 0); }
		public ComponentBodyContext componentBody() {
			return getRuleContext(ComponentBodyContext.class,0);
		}
		public TerminalNode CLOSE_CURLY_BRACKETS() { return getToken(ReactjsParser.CLOSE_CURLY_BRACKETS, 0); }
		public PureComponentBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pureComponentBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).enterPureComponentBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).exitPureComponentBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactjsParserVisitor ) return ((ReactjsParserVisitor<? extends T>)visitor).visitPureComponentBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PureComponentBodyContext pureComponentBody() throws RecognitionException {
		PureComponentBodyContext _localctx = new PureComponentBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pureComponentBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(RENDER);
			setState(138);
			match(OPEN_PARENTHSES);
			setState(139);
			match(CLOSE_PARENTHSES);
			setState(140);
			match(OPEN_CURLY_BRACKETS);
			setState(141);
			componentBody();
			setState(142);
			match(CLOSE_CURLY_BRACKETS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentBodyContext extends ParserRuleContext {
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public List<DeclArrayContext> declArray() {
			return getRuleContexts(DeclArrayContext.class);
		}
		public DeclArrayContext declArray(int i) {
			return getRuleContext(DeclArrayContext.class,i);
		}
		public List<DeclStringContext> declString() {
			return getRuleContexts(DeclStringContext.class);
		}
		public DeclStringContext declString(int i) {
			return getRuleContext(DeclStringContext.class,i);
		}
		public List<DeclIntContext> declInt() {
			return getRuleContexts(DeclIntContext.class);
		}
		public DeclIntContext declInt(int i) {
			return getRuleContext(DeclIntContext.class,i);
		}
		public List<DeclBooleanContext> declBoolean() {
			return getRuleContexts(DeclBooleanContext.class);
		}
		public DeclBooleanContext declBoolean(int i) {
			return getRuleContext(DeclBooleanContext.class,i);
		}
		public List<UpdateVarStringValueContext> updateVarStringValue() {
			return getRuleContexts(UpdateVarStringValueContext.class);
		}
		public UpdateVarStringValueContext updateVarStringValue(int i) {
			return getRuleContext(UpdateVarStringValueContext.class,i);
		}
		public List<UpdateVarIntValueContext> updateVarIntValue() {
			return getRuleContexts(UpdateVarIntValueContext.class);
		}
		public UpdateVarIntValueContext updateVarIntValue(int i) {
			return getRuleContext(UpdateVarIntValueContext.class,i);
		}
		public List<UseStateContext> useState() {
			return getRuleContexts(UseStateContext.class);
		}
		public UseStateContext useState(int i) {
			return getRuleContext(UseStateContext.class,i);
		}
		public List<UseEffectContext> useEffect() {
			return getRuleContexts(UseEffectContext.class);
		}
		public UseEffectContext useEffect(int i) {
			return getRuleContext(UseEffectContext.class,i);
		}
		public List<UseRefContext> useRef() {
			return getRuleContexts(UseRefContext.class);
		}
		public UseRefContext useRef(int i) {
			return getRuleContext(UseRefContext.class,i);
		}
		public List<ForLoopContext> forLoop() {
			return getRuleContexts(ForLoopContext.class);
		}
		public ForLoopContext forLoop(int i) {
			return getRuleContext(ForLoopContext.class,i);
		}
		public ComponentBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).enterComponentBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).exitComponentBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactjsParserVisitor ) return ((ReactjsParserVisitor<? extends T>)visitor).visitComponentBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentBodyContext componentBody() throws RecognitionException {
		ComponentBodyContext _localctx = new ComponentBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_componentBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8796093101056L) != 0)) {
				{
				setState(154);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(144);
					declArray();
					}
					break;
				case 2:
					{
					setState(145);
					declString();
					}
					break;
				case 3:
					{
					setState(146);
					declInt();
					}
					break;
				case 4:
					{
					setState(147);
					declBoolean();
					}
					break;
				case 5:
					{
					setState(148);
					updateVarStringValue();
					}
					break;
				case 6:
					{
					setState(149);
					updateVarIntValue();
					}
					break;
				case 7:
					{
					setState(150);
					useState();
					}
					break;
				case 8:
					{
					setState(151);
					useEffect();
					}
					break;
				case 9:
					{
					setState(152);
					useRef();
					}
					break;
				case 10:
					{
					setState(153);
					forLoop();
					}
					break;
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			returnStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(ReactjsParser.RETURN, 0); }
		public TerminalNode OPEN_PARENTHSES() { return getToken(ReactjsParser.OPEN_PARENTHSES, 0); }
		public HtmlELContext htmlEL() {
			return getRuleContext(HtmlELContext.class,0);
		}
		public TerminalNode CLOSE_PARENTHSES() { return getToken(ReactjsParser.CLOSE_PARENTHSES, 0); }
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactjsParserListener ) ((ReactjsParserListener)listener).exitReturnStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactjsParserVisitor ) return ((ReactjsParserVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_returnStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(RETURN);
			setState(162);
			match(OPEN_PARENTHSES);
			setState(163);
			htmlEL();
			setState(164);
			match(CLOSE_PARENTHSES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
